fixed alignment

--- a/assets/style/main.sass
+++ b/assets/style/main.sass
@@ -27,7 +27,6 @@ h2
   text-align: center
   margin: 0 0 4rem 0
   line-height: 2.5rem
-  flex: 1
   &:before
     background: $color-secondary
     border-radius: $border-radius
